fixed spacing and header bar color

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,6 +18,8 @@ section#featuredWork {
 
 section.caseStudies {
     grid-template-columns: 1fr 1fr;
+    row-gap: $spacing-small;
+
 }
 
 
